fixed card gap

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ main {
     background: #e4ebe0;
     padding: 30px 35px;
     border-radius: 20px;
+    margin-left: 30px;
     box-shadow: 6px 8px 10px #cfe4c3;
 }
 
@@ -134,7 +135,7 @@ main {
 
 .card-cointainer {
     display: flex;
-    gap: 100px;
+    /* gap: 100px; */
 }
 
 /* End Service Section Styles */
